patch 1474258: rvm portion of findbugs related fixes